# prototype

./: .gitignore  CMakeLists.txt  gdd.odt  main.cpp
core/: BlankScene.h  BootstrapScene.cpp  BootstrapScene.h  Engine.cpp  Engine.h  Game.cpp  Game.h  GameState.h  Scene.h
sfml/lib/: sfml-audio-d.lib  sfml-audio-s.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics-s.lib  sfml-graphics.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-d.lib  sfml-network-s.lib  sfml-network.lib  sfml-system-d.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-system.lib  sfml-window-d.lib  sfml-window-s-d.lib  sfml-window-s.lib  sfml-window.lib
